后端接口getDoctorbyDepartmentid更名为getDoctorByDpIdAndType，对应sql修改，直接从用户表查询，因为下拉列表建议能尽可能的看到所有的用户，即使没有数据，其实对于用户操作更加友好；同时添加了用户类型，当从就诊信息查询时，通过当前登录用户的就诊科室id和用户类型过滤出医师，毕竟不是所有的医师都能处理所有科室的问诊

--- a/src/main/webapp/diagnosticList.html
+++ b/src/main/webapp/diagnosticList.html
@@ -166,11 +166,7 @@
                     userId: '',
                     status: ''
                 },
-                docterList: [
-                    {id: 1, userName: '张医生'},
-                    {id: 2, userName: '李医生'},
-                    {id: 3, userName: '赵医生'}
-                ],
+                docterList: [],
                 statusList: [
                     {id: 1, name: '已挂号，未问诊'},
                     {id: 2, name: '正在问诊'},
@@ -331,6 +327,9 @@
                 },
                 formLabelWidth: '120px'
             },
+            mounted(){
+                this.getDoctorList();
+            },
             methods: {
                 addMedicalAdvice(){
 
@@ -415,6 +414,17 @@
                 handleCurrentChange(currentPage) {
                     this.pagination.currentPage = currentPage;
 
+                },
+                getDoctorList(){
+                    axios.get("users/getDoctorByDpIdAndType",
+                        {params:{
+                            departmentId:JSON.parse(localStorage.getItem("userInfo")).departmentId,
+                            userType:3
+                        }}).then(ret=>{
+                        if (ret.data.code == 1){
+                            this.docterList = ret.data.data;
+                        }
+                    })
                 }
             }
         }
