--- a/src/main/webapp/registryList.html
+++ b/src/main/webapp/registryList.html
@@ -222,7 +222,8 @@
                 getDoctorList(){
                     this.searchForm.userId = "";
                     axios.get("users/getDoctorByDpIdAndType",
-                        {params:{departmentId:this.searchForm.departmentId}}).then(ret=>{
+                        {params:{departmentId:this.searchForm.departmentId,
+                                 userType:3}}).then(ret=>{
                         if (ret.data.code == 1){
                             this.docterList = ret.data.data;
                         }
