第八次提交：新增权限菜单控制

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,33 +88,11 @@
             <!--侧边栏区域-->
             <el-aside width="200px" style="background-color: rgb(238, 241, 246)" id="aside">
                 <el-menu :default-openeds="['1','2','3']">
-                    <el-submenu index="1">
-                        <template slot="title"><i class="el-icon-menu"></i>用户管理</template>
+                    <el-submenu v-for="(menu,index) in menuList" :key="menu.id" :index="index+1+''">
+                        <template slot="title"><i class="el-icon-menu"></i>{{menu.menuName}}</template>
                         <el-menu-item-group>
-                            <el-menu-item index="1-1" @click="toHtml('userList.html')">
-                                <i class="el-icon-help"></i>用户列表
-                            </el-menu-item>
-                            <el-menu-item index="1-2"  @click="toHtml('addUser.html')">
-                                <i class="el-icon-help"></i>添加用户</el-menu-item>
-                        </el-menu-item-group>
-                    </el-submenu>
-                    <el-submenu index="2">
-                        <template slot="title"><i class="el-icon-menu"></i>挂号管理</template>
-                        <el-menu-item-group>
-                            <el-menu-item index="2-1" @click="toHtml('addPatient.html')">
-                                <i class="el-icon-help"></i>创建就诊卡
-                            </el-menu-item>
-                            <el-menu-item index="2-2" @click="toHtml('addRegistry.html')"><i class="el-icon-help"></i>门诊挂号
-                            </el-menu-item>
-                            <el-menu-item index="2-3" @click="toHtml('registryList.html')"><i class="el-icon-help"></i>挂号信息
-                            </el-menu-item>
-                        </el-menu-item-group>
-                    </el-submenu>
-                    <el-submenu index="3">
-                        <template slot="title"><i class="el-icon-menu"></i>门诊管理</template>
-                        <el-menu-item-group>
-                            <el-menu-item index="3-1" @click="toHtml('diagnosticList.html')">
-                                <i class="el-icon-help"></i>就诊信息
+                            <el-menu-item v-for="(subMenu,subIndex) in menu.menuDtos" :key="subMenu.id" :index="index+'-'+subIndex" @click="toHtml(subMenu.menuUrl)">
+                                <i class="el-icon-help"></i>{{subMenu.menuName}}
                             </el-menu-item>
                         </el-menu-item-group>
                     </el-submenu>
@@ -192,10 +170,30 @@
                     ]
                 },
                 url: 'img/img.jpg',
-                iframeSrc: 'welcome.html'
+                iframeSrc: 'welcome.html',
+                menuList:[
+                    {
+                        "id": 0,
+                        "menuName": "",
+                        "menuUrl": null,
+                        "menuType": 0,
+                        "parentId": null,
+                        "menuDtos": [
+                            {
+                                "id": "",
+                                "menuName": "",
+                                "menuUrl": "",
+                                "menuType": 0,
+                                "parentId": 0,
+                                "menuDtos": null
+                            }
+                        ]
+                    }
+                ]
             },
             mounted:function () {
               this.userInfo = JSON.parse(localStorage.getItem("userInfo"));
+              this.loadMenuList();
             },
             methods: {
                 toHtml(page){
@@ -244,6 +242,23 @@
                     this.$refs[formName].resetFields();
                     this.dialogFormVisible=false;
                 },
+                loadMenuList(){
+                    axios.get(
+                        "menu/getMenuByUId",
+                        {params:{uId:JSON.parse(localStorage.getItem("userInfo")).id}}
+                    ).then(
+                        ret=>{
+                            if (ret.data.code == 1){
+                                this.menuList = ret.data.data;
+                            }else{
+                                this.$notify.error({
+                                    title: '错误',
+                                    message: '菜单加载异常：' + ret.data.message
+                                });
+                            }
+                        }
+                    )
+                }
             }
         }
     );
